--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet"  href="http://localhost:3000/public/home.css"/>
 </head>
 <body>
-    <h1> Hello </h1>
+    <h1> Hello All EveryOne </h1>
     
 </body>
 </html>
